--- a/chat/chat.html
+++ b/chat/chat.html
@@ -8,6 +8,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"> <!--books favicon-->
     <link rel="stylesheet" href="/chat/chat.css">
     <link rel="stylesheet" href="/general.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -15,11 +21,10 @@
             <h1 class="nav-nook">BookNook.</h1>
         </div> 
         <div class="nav-right">
-            <img class="chat" src="/assets/chat.png">
-            <img class="basket" src="/assets/basket1.png">
-            <img class="wish-list" src="/assets/wish-list.png">
-            <img class="shop" src="/assets/shop.png">
-            <img class="user" src="/assets/user.png">       
+            <a href="/chat/chat.html"><img class= "chat" src="/assets/chat.png"></a>
+            <a href="/wishlist/wishlist.html"><img class="wish-list" src="/assets/wish-list.png"></a>
+            <a href="/shop/shop.html"><img class="shop" src="/assets/shop.png"></a>
+            <a href="/profile/profile.html"><img class="user" src="/assets/user.png"></a>       
         </div>   
     </div>
 
