--- a/home/home.html
+++ b/home/home.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookNook | Pre-loved books.</title>
+    <title>BookNook | Pre-loved books</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"> <!--books favicon-->
     <link rel="stylesheet" href="/home/home.css">
     <link rel="stylesheet" href="/general.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class="header">
@@ -15,11 +21,10 @@
                 <h1 class="nav-nook">BookNook.</h1>
             </div> 
             <div class="nav-right"> <!--does this need to be unordered list?-->
-                <img class="chat" src="/assets/chat.png">
-                <img class="basket" src="/assets/basket1.png">
-                <img class="wish-list" src="/assets/wish-list.png">
-                <img class="shop" src="/assets/shop.png">
-                <img class="user" src="/assets/user.png">       
+                <a href="/chat/chat.html"><img class= "chat" src="/assets/chat.png"></a>
+                <a href="/wishlist/wishlist.html"><img class="wish-list" src="/assets/wish-list.png"></a>
+                <a href="/shop/shop.html"><img class="shop" src="/assets/shop.png"></a>
+                <a href="/profile/profile.html"><img class="user" src="/assets/user.png"></a>       
             </div>   
         </div>
 
@@ -39,27 +44,31 @@
         </div>
         <div class="what-we-do-2">
             <div class="what-we-do-para">
-                <p class="para">BookNook is a sustainable book sharing platform that allows users to swap, buy and sell their pre-loved books. is where info about booknook needs where info about booknook needs to go bah bah fiosf bfdb dsis fauibf fubr fbudfs fbuisf grbu dueieh fuihs fihdi gff vbuifi giieo fidh. whiohfdi, fdsiof fdsio sefyfb fbueuf ugu fubdg fubfd fihef fugri fuisdf fbuidf</p>
+                <p class="para">BookNook is a book-sharing platform that allows users to swap, buy and sell their pre-loved books. Our mission is to spread the love of reading across the world, whilst maintaining an environmentally friendly approach. Sustainability is at the heart of everything we do. There are how many trees per day cut down. little fact here.</p>
             </div>
         </div>
 
         <div class="grid-container">
             <div class="shop-grid">
-                <h2>Shop</h2>
+                <h2 class="shop-heading">Shop & Swap</h2>
+                <p class="shop-para">Buy, sell, and swap your used books.</p>
             </div>
             <div class="connect-grid">
-                <h2>Connect</h2>
+                <h2 class="connect-heading">Connect</h2>
+                <p class="connect-para">Join our BookNook community, post book reviews and WHAT? </p>
             </div>
             <div class="bag-grid">
-                <h2>Bag</h2>
+                <h2 class="bag-heading">Bag</h2>
+                <p class="bag-para">Your shopping bag - saved for you every time you login.</p>
             </div>
             <div class="wishlist-grid">
-                <h2>Wish List</h2>
+                <h2 class="wish-heading">Wish List</h2>
+                <p class="wish-para">Create a wish list, so you never forget which books you want in future.</p>
             </div>
         </div>
 
         <div class="quote-heading">
-            <h1 class="quote-line">"BookNook lets me connect with friends. It's like having an online book club at your fingertips."</h1>
+            <h1 class="quote-line">"BookNook lets me connect with friends. It's like having an online book club at my fingertips."</h1>
         </div>
 
         <div class="sustain-section">
