--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookNook.</title>
+    <title>BookNook. | Profile</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"> <!--books favicon-->
     <link rel="stylesheet" href="/profile/profile.css">
     <link rel="stylesheet" href="/general.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -15,40 +21,14 @@
             <h1 class="nav-nook">BookNook.</h1>
         </div> 
         <div class="nav-right">
-            <img class="chat" src="/assets/chat.png">
-            <img class="basket" src="/assets/basket1.png">
-            <img class="wish-list" src="/assets/wish-list.png">
-            <img class="shop" src="/assets/shop.png">
-            <img class="user" src="/assets/user.png">       
+            <a href="/chat/chat.html"><img class= "chat" src="/assets/chat.png"></a>
+            <a href="/wishlist/wishlist.html"><img class="wish-list" src="/assets/wish-list.png"></a>
+            <a href="/shop/shop.html"><img class="shop" src="/assets/shop.png"></a>
+            <a href="/profile/profile.html"><img class="user" src="/assets/user.png"></a>     
         </div>   
     </div>
 
-    <div class="profile-container">
-        <div class="welcome-section">
-            <h1 class="profile-heading">Your Profile.</h1>
-        </div>
-    </div>
-
-    <div class="user-profile">
-        <div class="user-profile-left">
-            <img class="profile-pic" src="/assets/book3.jpg">
-        </div>
-        
-        <div class="user-profile-right">
-            <div class="user-bio">
-                <h2>Bio</h2>
-                <p>name, age, interests and more can go here from express.</p>
-            </div>
-            <div class="user-wishlist">
-                <h2>Wish List</h2>
-                <p>wish list items go in here can be updated on express!</p>
-            </div>
-        </div>
-
-    </div>
-
-
-
+    
 
 
 
