Profile html and css complete
Profile page html and css finished.

--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -1,32 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookNook.</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"> <!--books favicon-->
-    <link rel="stylesheet" href="/wishlist/wishlist.css">
-    <link rel="stylesheet" href="/general.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BookNook | Pre-loved books</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/assets/images/favicon-32x32.png"
+    />
+    <!--books favicon-->
+    <link rel="stylesheet" href="/public/assets/styles/wishlist.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <!--navbar start-->
+  <body>
     <div class="header">
-        <div class="nav-left">
-            <h1 class="nav-nook">BookNook.</h1>
-        </div> 
-        <div class="nav-right">
-            <a href="/chat/chat.html"><img class= "chat" src="/assets/chat.png"></a>
-            <a href="/wishlist/wishlist.html"><img class="wish-list" src="/assets/wish-list.png"></a>
-            <a href="/shop/shop.html"><img class="shop" src="/assets/shop.png"></a>
-            <a href="/profile/profile.html"><img class="user" src="/assets/user.png"></a>        
-        </div>   
+      <div class="nav-left">
+        <h1 class="nav-nook">BookNook.</h1>
+      </div>
+      <div class="nav-right">
+        <a href="/home/home.html"
+          ><img class="home" src="/public/assets/images/home.png"
+        /></a>
+        <a href="/wishlist/wishlist.html"
+          ><img class="wish-list" src="/public/assets/images/wish-list.png"
+        /></a>
+        <a href="/shop/shop.html"
+          ><img class="shop" src="/public/assets/images/shop.png"
+        /></a>
+        <a href="/profile/profile.html"
+          ><img class="user" src="/public/assets/images/user.png"
+        /></a>
+      </div>
     </div>
+    <!--navbar end-->
 
-</body>
+    <!--what we do start-->
+    <div class="what-we-do">
+      <div class="what-we-do-heading">
+        <h2 class="what-title">Your Wishlist.</h2>
+      </div>
+    </div>
+    <div class="what-we-do-2">
+      <div class="what-we-do-para">
+        <p class="para">Add, save, and delete items from your wishlist.</p>
+      </div>
+    </div>
+    <!--what we do end-->
+
+    <!--wishlist start-->
+    <div class="grid-container">
+      <div class="grid-item">1</div>
+      <div class="grid-item">2</div>
+      <div class="grid-item">3</div>
+      <div class="grid-item">4</div>
+      <div class="grid-item">5</div>
+      <div class="grid-item">6</div>
+      <div class="grid-item">7</div>
+      <div class="grid-item">8</div>
+      <div class="grid-item">9</div>
+    </div>
+  </body>
 </html>
