--- a/home/home.html
+++ b/home/home.html
@@ -9,11 +9,10 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon-32x32.png"
+      href="/public/assets/images/favicon-32x32.png"
     />
     <!--books favicon-->
-    <link rel="stylesheet" href="/home/home.css" />
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/public/assets/styles/home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,28 +26,29 @@
       rel="stylesheet"
     />
   </head>
+  <!--navbar start-->
   <body>
     <div class="header">
       <div class="nav-left">
         <h1 class="nav-nook">BookNook.</h1>
       </div>
       <div class="nav-right">
-        <!--does this need to be unordered list?-->
-        <a href="/chat/chat.html"
-          ><img class="chat" src="/assets/chat.png"
+        <a href="/home/home.html"
+          ><img class="home" src="/public/assets/images/home.png"
         /></a>
         <a href="/wishlist/wishlist.html"
-          ><img class="wish-list" src="/assets/wish-list.png"
+          ><img class="wish-list" src="/public/assets/images/wish-list.png"
         /></a>
         <a href="/shop/shop.html"
-          ><img class="shop" src="/assets/shop.png"
+          ><img class="shop" src="/public/assets/images/shop.png"
         /></a>
         <a href="/profile/profile.html"
-          ><img class="user" src="/assets/user.png"
+          ><img class="user" src="/public/assets/images/user.png"
         /></a>
       </div>
     </div>
-
+    <!--navbar end-->
+    <!--welcome banner start-->
     <div class="welcome">
       <div class="welcome-heading">
         <h1 class="story-starts">Your story starts here.</h1>
@@ -57,7 +57,8 @@
         </div>
       </div>
     </div>
-
+    <!--welcome banner end-->
+    <!--what we do start-->
     <div class="what-we-do">
       <div class="what-we-do-heading">
         <h2 class="what-title">About BookNook.</h2>
@@ -66,24 +67,24 @@
     <div class="what-we-do-2">
       <div class="what-we-do-para">
         <p class="para">
-          BookNook is a book-sharing platform that allows users to swap, buy and
-          sell their pre-loved books. Our mission is to spread the love of
-          reading across the world, whilst maintaining an environmentally
-          friendly approach. Sustainability is at the heart of everything we do.
-          There are how many trees per day cut down. little fact here.
+          BookNook is a book-sharing platform that allows users to browse,
+          research and save their favourite books. Our mission is to spread the
+          love of reading across the world, whilst maintaining an
+          environmentally friendly approach.
         </p>
       </div>
     </div>
-
+    <!--what we do end-->
+    <!--grid start-->
     <div class="grid-container">
       <div class="shop-grid">
-        <h2 class="shop-heading">Shop & Swap</h2>
-        <p class="shop-para">Buy, sell, and swap your used books.</p>
+        <h2 class="shop-heading">Shop</h2>
+        <p class="shop-para">Browse, save and order books.</p>
       </div>
       <div class="connect-grid">
         <h2 class="connect-heading">Connect</h2>
         <p class="connect-para">
-          Join our BookNook community, post book reviews and WHAT?
+          Join our BookNook community and comment on the books you love.
         </p>
       </div>
       <div class="bag-grid">
@@ -95,12 +96,13 @@
       <div class="wishlist-grid">
         <h2 class="wish-heading">Wish List</h2>
         <p class="wish-para">
-          Create a wish list, so you never forget which books you want in
-          future.
+          Create a wish list, so you never forget which books you would like to
+          buy in the future.
         </p>
       </div>
     </div>
-
+    <!--grid end-->
+    <!--sustain start-->
     <div class="quote-heading">
       <h1 class="quote-line">
         "BookNook lets me connect with friends. It's like having an online book
@@ -116,5 +118,6 @@
         </div>
       </div>
     </div>
+    <!--sustain end-->
   </body>
 </html>
