--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,38 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookNook. | Profile</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"> <!--books favicon-->
-    <link rel="stylesheet" href="/profile/profile.css">
-    <link rel="stylesheet" href="/general.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BookNook | Pre-loved books</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/assets/images/favicon-32x32.png"
+    />
+    <!--books favicon-->
+    <link rel="stylesheet" href="/public/assets/styles/profile.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <!--navbar start-->
+  <body>
     <div class="header">
-        <div class="nav-left">
-            <h1 class="nav-nook">BookNook.</h1>
-        </div> 
-        <div class="nav-right">
-            <a href="/chat/chat.html"><img class= "chat" src="/assets/chat.png"></a>
-            <a href="/wishlist/wishlist.html"><img class="wish-list" src="/assets/wish-list.png"></a>
-            <a href="/shop/shop.html"><img class="shop" src="/assets/shop.png"></a>
-            <a href="/profile/profile.html"><img class="user" src="/assets/user.png"></a>     
-        </div>   
+      <div class="nav-left">
+        <h1 class="nav-nook">BookNook.</h1>
+      </div>
+      <div class="nav-right">
+        <a href="/home/home.html"
+          ><img class="home" src="/public/assets/images/home.png"
+        /></a>
+        <a href="/wishlist/wishlist.html"
+          ><img class="wish-list" src="/public/assets/images/wish-list.png"
+        /></a>
+        <a href="/shop/shop.html"
+          ><img class="shop" src="/public/assets/images/shop.png"
+        /></a>
+        <a href="/profile/profile.html"
+          ><img class="user" src="/public/assets/images/user.png"
+        /></a>
+      </div>
+    </div>
+    <!--navbar end-->
+
+    <!--profile start-->
+    <div class="profile">
+      <div class="profile-heading">
+        <h2 class="profile-title">Your Profile.</h2>
+      </div>
     </div>
 
-    
-
-
-
-
-
-</body>
+    <div class="profile-info">
+      <div class="left-bio">
+        <h1 class="bio-heading">Bio</h1>
+        <p class="bio-para">
+          Hi ! My name is Jane Doe, and I live in Birmingham UK. I love to read
+          horror novels, and I have a dog called Bruce. The most books I have
+          ever read is 3 in one week.
+        </p>
+      </div>
+      <div class="center-picture">
+        <img class="profile-img" src="/public/assets/images/book5.jpg" />
+      </div>
+      <div class="about-list">
+        <h1 class="about-heading">About Me</h1>
+        <h2 class="author-heading">Favourite Author</h2>
+        <p class="author-para">Stephen King</p>
+        <h2 class="genre-heading">Favourite Genre</h2>
+        <p class="genre-para">Horror</p>
+        <h2 class="book-heading">Favourite Book</h2>
+        <p class="book-para">The Count of Monte Cristo</p>
+        <h2></h2>
+      </div>
+    </div>
+    <!--profile end-->
+  </body>
 </html>
