--- a/home/home.html
+++ b/home/home.html
@@ -53,7 +53,7 @@
       <div class="welcome-heading">
         <h1 class="story-starts">Your story starts here.</h1>
         <div class="sign-up">
-          <button class="sign-up-button">Sign Up</button>
+          <button class="sign-up-button">Log In</button>
         </div>
       </div>
     </div>
