--- a/shop/shop.html
+++ b/shop/shop.html
@@ -1,88 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookNook | Shop</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"> <!--books favicon-->
-    <link rel="stylesheet" href="/shop/shop.css">
-    <link rel="stylesheet" href="/general.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/assets/images/favicon-32x32.png"
+    />
+    <!--books favicon-->
+    <link rel="stylesheet" href="/public/assets/styles/shop.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="header">
-        <div class="nav-left">
-            <h1 class="nav-nook">BookNook.</h1>
-        </div> 
-        <div class="nav-right">
-            <a href="/chat/chat.html"><img class= "chat" src="/assets/chat.png"></a>
-            <a href="/wishlist/wishlist.html"><img class="wish-list" src="/assets/wish-list.png"></a>
-            <a href="/shop/shop.html"><img class="shop" src="/assets/shop.png"></a>
-            <a href="/profile/profile.html"><img class="user" src="/assets/user.png"></a>       
-        </div>   
+      <div class="nav-left">
+        <h1 class="nav-nook">BookNook.</h1>
+      </div>
+      <div class="nav-right">
+        <a href="/home/home.html"
+          ><img class="home" src="/public/assets/images/home.png"
+        /></a>
+        <a href="/wishlist/wishlist.html"
+          ><img class="wish-list" src="/public/assets/images/wish-list.png"
+        /></a>
+        <a href="/shop/shop.html"
+          ><img class="shop" src="/public/assets/images/shop.png"
+        /></a>
+        <a href="/profile/profile.html"
+          ><img class="user" src="/public/assets/images/user.png"
+        /></a>
+      </div>
     </div>
-
+    <!--shop start-->
     <div class="welcome">
-        <div class="welcome-heading">
-            <h1 class="swap-shop">Shop, swap, and sell your pre-loved books.</h1>
-            <div class="search-bars">
-                <input class="search-bar-input" type="text" placeholder="Search for genre/type/author">
-            </div>   
-        </div>  
-    </div>
-
-    <div class="what-we-do">
-        <div class="what-we-do-heading">
-            <h2 class="what-title">Featured Books.</h2>
+      <div class="welcome-heading">
+        <h1 class="story-starts">Shop the BookNook Library.</h1>
+        <div class="search">
+          <input
+            type="text"
+            placeholder="Search BookNook..."
+            class="search-bar"
+          />
         </div>
+      </div>
     </div>
-    <div class="what-we-do-2">
-        <div class="what-we-do-para">
-            <p class="para">Check out our top picks this week</p>
-        </div>
+    <!--shop end-->
+    <div class="wish-container-1">
+      <div class="item-1">
+        <button type="button" class="bag-button"></button>
+        <button type="button" class="comment-button"></button>
+        <img class="book-image" src="/public/assets/images/book3.jpg" />
+        <p>Harry Potter</p>
+        <p>JK Rowling</p>
+        <p>£9.99</p>
+      </div>
     </div>
-
-    <div class="grid-container">
-        <div class="shop-grid">
-            <h2 class="shop-heading">Shop & Swap</h2>
-            <p class="shop-para">Buy, sell, and swap your used books.</p>
-        </div>
-        <div class="connect-grid">
-            <h2 class="connect-heading">Connect</h2>
-            <p class="connect-para">Join our BookNook community, post book reviews and WHAT? </p>
-        </div>
-        <div class="bag-grid">
-            <h2 class="bag-heading">Bag</h2>
-            <p class="bag-para">Your shopping bag - saved for you every time you login.</p>
-        </div>
-        <div class="wishlist-grid">
-            <h2 class="wish-heading">Wish List</h2>
-            <p class="wish-para">Create a wish list, so you never forget which books you want in future.</p>
-        </div>
+    <div class="wish-container-2">
+      <div class="item-2">
+        <button type="button" class="bag-button"></button>
+        <button type="button" class="comment-button"></button>
+        <img class="book-image" src="/public/assets/images/book3.jpg" />
+        <p>The Shining</p>
+        <p>Stephen kING</p>
+        <p>£11</p>
+      </div>
     </div>
-
-    <div class="quote-heading">
-        <h1 class="quote-line">"BookNook lets me connect with friends. It's like having an online book club at my fingertips."</h1>
+    <div class="wish-container-3">
+      <div class="item-3">
+        <button type="button" class="bag-button"></button>
+        <button type="button" class="comment-button"></button>
+        <img class="book-image" src="/public/assets/images/book3.jpg" />
+        <p>The Shining</p>
+        <p>Stephen kING</p>
+        <p>£11</p>
+      </div>
+      <div class="wish-container-4">
+        <div class="item-4">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
+      <div class="wish-container-5">
+        <div class="item-5">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
+      <div class="wish-container-6">
+        <div class="item-6">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
+      <div class="wish-container-7">
+        <div class="item-7">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
+      <div class="wish-container-8">
+        <div class="item-8">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
+      <div class="wish-container-9">
+        <div class="item-9">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
+      <div class="wish-container-10">
+        <div class="item-10">
+          <button type="button" class="bag-button"></button>
+          <button type="button" class="comment-button"></button>
+          <img class="book-image" src="/public/assets/images/book3.jpg" />
+          <p>The Shining</p>
+          <p>Stephen kING</p>
+          <p>£11</p>
+        </div>
+      </div>
     </div>
-
-    <div class="sustain-section">
-        <div class="sustain-heading">
-            <h1 class="sustain-title">Sustainability. It's what we do.</h1>
-            <div class="learn-more">
-                <button class="learn-more-button">Learn More</button>
-            </div>   
-        </div>  
-    </div>
-
-
-
-
-
-</body>
+  </body>
 </html>
