Shop html updated
Search bar and submit button created ready for FUSE.js

--- a/shop/shop.html
+++ b/shop/shop.html
@@ -50,13 +50,16 @@
     <div class="welcome">
       <div class="welcome-heading">
         <h1 class="story-starts">Shop the BookNook Library.</h1>
-        <div class="search">
+        <form class="search-form">
           <input
             type="text"
-            placeholder="Search BookNook..."
+            placeholder="Search Library..."
             class="search-bar"
           />
-        </div>
+          <button type="submit" class="submit-button">
+            <img src="/public/assets/images/search.png" class="search-img" />
+          </button>
+        </form>
       </div>
     </div>
     <!--shop end-->
