--- a/profile/profile.html
+++ b/profile/profile.html
@@ -76,7 +76,7 @@
         <p class="genre-para">Horror</p>
         <h2 class="book-heading">Favourite Book</h2>
         <p class="book-para">The Count of Monte Cristo</p>
-        <h2></h2>
+        <button class="settings-button"></button>
       </div>
     </div>
     <!--profile end-->
