--- a/shop/shop.html
+++ b/shop/shop.html
@@ -98,7 +98,7 @@
           <button type="button" class="comment-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen King</p>
           <p>£11</p>
         </div>
       </div>
