--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -71,7 +71,7 @@
         <button type="button" class="delete-button"></button>
         <img class="book-image" src="/public/assets/images/book3.jpg" />
         <p>The Shining</p>
-        <p>Stephen kING</p>
+        <p>Stephen king</p>
         <p>£11</p>
       </div>
     </div>
@@ -80,7 +80,7 @@
         <button type="button" class="delete-button"></button>
         <img class="book-image" src="/public/assets/images/book3.jpg" />
         <p>The Shining</p>
-        <p>Stephen kING</p>
+        <p>Stephen king</p>
         <p>£11</p>
       </div>
       <div class="wish-container-4">
@@ -88,7 +88,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
@@ -97,7 +97,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
@@ -106,7 +106,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
@@ -115,7 +115,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
@@ -124,7 +124,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
@@ -133,7 +133,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
@@ -142,7 +142,7 @@
           <button type="button" class="delete-button"></button>
           <img class="book-image" src="/public/assets/images/book3.jpg" />
           <p>The Shining</p>
-          <p>Stephen kING</p>
+          <p>Stephen king</p>
           <p>£11</p>
         </div>
       </div>
